# rag-driven-generative-ai

./: .gitignore  pyproject.toml
src/: intro.py  naive_rag_by_keyword_matching.py
src/advanced_rag/: cosine_search.py  enhanced_search.py  nlp_helper.py  semantic_search.py  sklearn_index_search.py
src/helpers/: __init__.py  constants.py  llm_helper.py
