[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.8.0",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "spacy>=3.8.14",
]
